@startuml

title __GRAFOS's Class Diagram__\n

  namespace br.ufba.mestrado.algoritimos.grafos {
    class br.ufba.mestrado.algoritimos.grafos.GFG {
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    class br.ufba.mestrado.algoritimos.grafos.Graph {
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    class br.ufba.mestrado.algoritimos.grafos.VertexCoverProblem {
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    namespace manyaprroaches {
      class br.ufba.mestrado.algoritimos.grafos.manyaprroaches.Edge {
      }
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    namespace manyaprroaches {
      class br.ufba.mestrado.algoritimos.grafos.manyaprroaches.Graph {
      }
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    namespace manyaprroaches {
      class br.ufba.mestrado.algoritimos.grafos.manyaprroaches.MaximalIndependentSet {
      }
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    namespace manyaprroaches {
      class br.ufba.mestrado.algoritimos.grafos.manyaprroaches.Vertex {
      }
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    namespace manyaprroaches {
      class br.ufba.mestrado.algoritimos.grafos.manyaprroaches.VertexCover {
      }
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    namespace manyaprroaches {
      class br.ufba.mestrado.algoritimos.grafos.manyaprroaches.VertexCoverTester {
      }
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    namespace psjava {
      class br.ufba.mestrado.algoritimos.grafos.psjava.KonigTheorem {
      }
    }
  }
  

  namespace br.ufba.mestrado.algoritimos.grafos {
    namespace psjava {
      class br.ufba.mestrado.algoritimos.grafos.psjava.KonigTheoremMain {
      }
    }
  }
  

  br.ufba.mestrado.algoritimos.grafos.manyaprroaches.Edge o-- br.ufba.mestrado.algoritimos.grafos.manyaprroaches.Vertex : vertex1
  br.ufba.mestrado.algoritimos.grafos.manyaprroaches.Edge o-- br.ufba.mestrado.algoritimos.grafos.manyaprroaches.Vertex : vertex2
  br.ufba.mestrado.algoritimos.grafos.manyaprroaches.VertexCover o-- br.ufba.mestrado.algoritimos.grafos.manyaprroaches.Graph : graph


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
